--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "authors": [
         {
-            "name": "CertaiN",
+            "name": "mpyw",
             "email": "ryosuke_i_628@yahoo.co.jp",
             "homepage": "https://gravatar.com/mpyw",
             "role": "developer"
